syntax = "proto3";

package proto;


message LogObj {
    LogLevel level = 1; //等级
    sint64 timestampUTC = 2; //发生的UTC时间戳秒
    string tag = 3; //tag或应用标记
    string message = 4; //内容
    sint64 id = 5;

    string timestampStr = 20; //发生时间，字符串
}

enum LogLevel {
    Trace = 0; //业务流程
    Debug = 1;
    Info = 2;
    Warn = 3;
    Error = 4;
    Fatal = 5; //致命
}